Delete some code

--- a/about.html
+++ b/about.html
@@ -110,6 +110,8 @@
                         2015年04月 “订饭组”网站正式上线<br>
                         2016年09月 推出餐厅运营一体化解决方案<br>
                         2016年10月 日均订单突破500单<br>
+                        <br>
+                        开发者：<a href="https://github.com/chanson1024">Chanson Shaw</a>
                         </div>
                         </span>
                     </div>
