--- a/place.html
+++ b/place.html
@@ -98,29 +98,29 @@
                     </div>
                     <div id="n1" class="place-names">
                         <div class="name-item"><a  class="place-link" href="shop.html">北辰世纪中心</a></div>
-                        <div class="name-item"><a>世通国际大厦</a></div>
-                        <div class="name-item"><a>华贸中心</a></div>
-                        <div class="name-item"><a>华腾劲松商务楼</a></div>
-                        <div class="name-item"><a>华腾旌凯大厦</a></div>
-                        <div class="name-item"><a>金泰国际大厦</a></div>
-                        <div class="name-item"><a>金泰大厦</a></div>
-                        <div class="name-item"><a>金泰国益大厦</a></div>
-                        <div class="name-item"><a>北京富力中心</a></div>
-                        <div class="name-item"><a>华腾旌凯写字楼</a></div>
-                        <div class="name-item"><a>世茂国际中心</a></div>
-                        <div class="name-item"><a class="new">华腾北搪商务大厦</a></div>
+                        <div class="name-item"><a href="shop.html">世通国际大厦</a></div>
+                        <div class="name-item"><a href="shop.html">华贸中心</a></div>
+                        <div class="name-item"><a href="shop.html">华腾劲松商务楼</a></div>
+                        <div class="name-item"><a href="shop.html">华腾旌凯大厦</a></div>
+                        <div class="name-item"><a href="shop.html">金泰国际大厦</a></div>
+                        <div class="name-item"><a href="shop.html">金泰大厦</a></div>
+                        <div class="name-item"><a href="shop.html">金泰国益大厦</a></div>
+                        <div class="name-item"><a href="shop.html">北京富力中心</a></div>
+                        <div class="name-item"><a href="shop.html">华腾旌凯写字楼</a></div>
+                        <div class="name-item"><a href="shop.html">世茂国际中心</a></div>
+                        <div class="name-item"><a class="new" a href="shop.html">华腾北搪商务大厦</a></div>
                     </div>
                     <div id="n2" class="place-names n">
-                        <div class="name-item"><a>城建大厦</a></div>
-                        <div class="name-item"><a>华腾科技大厦</a></div>
-                        <div class="name-item"><a>奥北科技园</a></div>
-                        <div class="name-item"><a>翠微路国企写字楼</a></div>
-                        <div class="name-item"><a>电信实业大厦</a></div>
-                        <div class="name-item"><a>理想国际大厦</a></div>
-                        <div class="name-item"><a>丰裕写字楼</a></div>
-                        <div class="name-item"><a>中关村资本大厦</a></div>
-                        <div class="name-item"><a>融汇国际大厦</a></div>
-                        <div class="name-item"><a class="new">金泰富地大厦</a></div>
+                        <div class="name-item"><a href="shop.html">城建大厦</a></div>
+                        <div class="name-item"><a href="shop.html">华腾科技大厦</a></div>
+                        <div class="name-item"><a href="shop.html">奥北科技园</a></div>
+                        <div class="name-item"><a href="shop.html">翠微路国企写字楼</a></div>
+                        <div class="name-item"><a href="shop.html">电信实业大厦</a></div>
+                        <div class="name-item"><a href="shop.html">理想国际大厦</a></div>
+                        <div class="name-item"><a href="shop.html">丰裕写字楼</a></div>
+                        <div class="name-item"><a href="shop.html">中关村资本大厦</a></div>
+                        <div class="name-item"><a href="shop.html">融汇国际大厦</a></div>
+                        <div class="name-item"><a class="new" a href="shop.html">金泰富地大厦</a></div>
                     </div>
                     <div id="n3" class="place-names n">
                         <div class="name-item"><a>首建金融中心</a></div>
