--- a/order_confirm.html
+++ b/order_confirm.html
@@ -209,7 +209,7 @@
     <script src="scripts/cart.lib.js"></script>
     <script src="scripts/myInfo.js"></script> 
     <script src="scripts/shopInfo.js"></script> 
-    <script src="scripts/order.js"></script>
+    <script src="scripts/order.js?v=1"></script>
     <script src="scripts/login.js"></script>
     <script src="scripts/header.js"></script>
     <script src="scripts/footer.js"></script>
