Added security code

--- a/place.html
+++ b/place.html
@@ -367,7 +367,7 @@
     <script src="scripts/login.js"></script>
     <script src="scripts/cart.lib.js"></script>
     <script src="scripts/cart.js"></script>
-    <script src="scripts/header.js"></script>
+    <script src="scripts/header.js?v=1"></script>
     <script src="scripts/footer.js"></script>
     <script type="text/javascript">
                 $(function(){
