--- a/shop.html
+++ b/shop.html
@@ -954,7 +954,7 @@
                     <dl>
                         <dt>
                         <img class="shop-icon" src="images/test02.jpg" >
-                        <span class="shop-name" shopId="0001" shopName="山东新闻大厦" shopPhone="13599999999">
+                        <span class="shop-name" shopId="0001" >
                         北京国际大厦
                         </span>
                         <span class="switch-address">
