--- a/about.html
+++ b/about.html
@@ -110,8 +110,10 @@
                         2015年04月 “订饭组”网站正式上线<br>
                         2016年09月 推出餐厅运营一体化解决方案<br>
                         2016年10月 日均订单突破500单<br>
+                        2017年02月 项目宣布失败（资金不足）<br>
+                        2017年03月 项目开源
                         <br>
-                        开发者：<a href="https://github.com/chanson1024">Chanson Shaw</a>
+                        开发者：<a href="https://github.com/chanson1024/dingfanzu" style="color:#0000ff;">Chanson1024</a>
                         </div>
                         </span>
                     </div>
@@ -123,9 +125,8 @@
                     </div>
                     <div class="body-content">
                         <span class="bft"> 
-                        <p>客服电话：13581651333</p>
-                        <p>QQ：912750350</p>
-                        <p>催单电话：13333333333</p> 
+                        <p>客服微信：java2048</p>
+                        <p>网站主页：https://github.com/chanson1024/dingfanzu</p>  
                         </span>
 
                     </div>
