--- a/order_confirm.html
+++ b/order_confirm.html
@@ -35,7 +35,7 @@
                 <a class="logo" href="/"></a>
                 <div class="search">
                 <img class="search-icon" src="/images/icon_search.png" width="22" height="22">
-                <input id="search-input" class="search-input" type="text" placeholder="请输入楼名" onkeypress="onKeySearch()">
+                <input id="search-input" class="search-input" type="text" placeholder="请输入地点" onkeypress="onKeySearch()">
                 <span id="search-del" class="search-del">&times;</span>
                 </div>
                 <div class="clear"></div>
@@ -44,7 +44,7 @@
                 <div class="login fl">
 
                     <span class="header-operater">
-                    <a href="/">外卖</a>
+                    <a href="/">首页</a>
                     <a href="/account/order">我的订单</a>
                     <a href="/about.html?p=lianxiwomen">联系我们</a>
                     </span>
