--- a/shop/1001.html
+++ b/shop/1001.html
@@ -42,7 +42,7 @@
                 <a class="logo" href="/"></a>
                 <div class="search">
                 <img class="search-icon" src="/images/icon_search.png" width="22" height="22">
-                <input class="search-input" type="text" placeholder="请输入楼名">
+                <input class="search-input" type="text" placeholder="请输入地点">
                 </div>
                 <div class="clear"></div>
             </div>
@@ -50,7 +50,7 @@
                 <div class="login fl">
 
                     <span class="header-operater">
-                    <a href="/index.html">外卖</a>
+                    <a href="/index.html">首页</a>
                     <a href="/account/order.php">我的订单</a>
                     <a>联系我们</a>
                     </span>
